<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_black" >

        <ImageView
            android:id="@+id/errorCaused"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:scaleType="center"
            android:src="@drawable/ic_error"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/updatingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@anim/ic_spin_animation_white"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" >

            <ru.st1ng.vk.views.WebImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_photo_placeholder"
                android:padding="10dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <TextView
                android:id="@+id/notificationSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/notification_settings"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" >

                <TextView
                    android:id="@+id/allowToSendNotifications"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/sendmenotifications"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <CheckBox
                    android:id="@+id/sendNotificationsCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" >

                <TextView
                    android:id="@+id/allowToSendNotifications"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/vibrate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <CheckBox
                    android:id="@+id/notificationVibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" >

                <TextView
                    android:id="@+id/allowToSendNotifications"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/sound"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <CheckBox
                    android:id="@+id/notificationSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <TextView
                android:id="@+id/fontSizes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/font_size"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <Spinner
                android:id="@+id/fontSizesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_button_selector"
                android:entries="@array/font_sizes" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <TextView
                android:id="@+id/showMeOnline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/show_me_online"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <Spinner
                android:id="@+id/showOnlineSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_button_selector"
                android:entries="@array/show_me_online_entries" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <Button
                android:id="@+id/logoff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_button_selector"
                android:text="@string/log_off"
                android:textColor="@drawable/text_blue_white_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <Button
                android:id="@+id/sendFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_button_selector"
                android:text="@string/leave_feedback_on_google_play"
                android:textColor="@drawable/text_blue_white_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <Button
                android:id="@+id/contactAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_button_selector"
                android:text="@string/contact_author"
                android:textColor="@drawable/text_blue_white_color" />

            <TextView
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:text="@string/license"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:text="Version:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>