<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/frameBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_black" >

                <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:scaleType="center"
            android:duplicateParentState="true"
            android:src="@drawable/ic_back_selector" />
                
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/messages"
            android:textAppearance="?android:attr/textAppearanceMedium" />

         <ImageView
            android:id="@+id/errorCaused"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:padding="5dp"
            android:scaleType="center"
            android:visibility="invisible"
            android:src="@drawable/ic_error" />
        
        <ImageView
            android:id="@+id/updatingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            android:src="@anim/ic_spin_animation_white"/>

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ru.st1ng.vk.views.WebImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/bg_photo_placeholder"
                android:padding="8dp" />

            <ImageView
                android:id="@+id/contactsLoadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@anim/ic_spin_animation_blue"
                android:visibility="invisible" />

            <Button
                android:id="@+id/requestSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_selector"
                android:text="@string/add_friend"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/requestCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#fff"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/decline_request"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/text_darkblue_color" />

            <Button
                android:id="@+id/buttonCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_selector"
                android:text="@string/call"
                android:textColor="#fff"
                android:visibility="invisible" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>